<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".mainActivity.settings.shoppinglist.HomeFragment">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            android:id="@+id/scroll"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="-50dp">

        <LinearLayout
                android:id="@+id/containerList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
        </LinearLayout>
    </ScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent">

            <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:srcCompat="@drawable/baseline_delete_black_24dp"
                    android:id="@+id/btn_delete"
                    android:backgroundTint="@color/deepblack"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/custom_image_button"
                    app:tint="@color/coolgrey" />

        </RelativeLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/bottom">

            <Button
                    android:text="@string/Artikel_gekauft"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    app:layout_constraintEnd_toStartOf="@id/btn_addItem"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="6dp"
                    android:id="@+id/btn_submit"
                    app:iconTint="#040404"
                    android:textSize="16dp"
                    android:backgroundTint="@color/brandred"
                    app:cornerRadius="16dp" />

            <ImageButton
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/baseline_add_black_24dp"
                    android:id="@+id/btn_addItem"
                    android:backgroundTint="@color/deepblack"
                    android:background="@drawable/custom_image_button"
                    app:tint="@color/coolgrey" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>