<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_receipt_long_black_24dp"
            android:title="@string/title_home" />

    <item
            android:id="@+id/navigation_archive"
            android:icon="@drawable/baseline_inventory_black_24dp"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_finances"
            android:icon="@drawable/baseline_account_balance_black_24dp"
            android:title="@string/title_notifications" />

    <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/baseline_settings_black_24dp"
            android:title="@string/title_settings" />

</menu>